Reverted div-based tables to tables with correct collapse behavior.

--- a/gitb-ui/app/assets/stylesheets/less/app.less
+++ b/gitb-ui/app/assets/stylesheets/less/app.less
@@ -125,3 +125,86 @@ body {
 	}
 
 }
+
+table.expandable-table {
+	th {
+		background-color: #FFFFFF;
+	}
+	tr {
+		background-color: #F5F5F5;
+	}
+}
+
+table tbody tr.expandable-table-row-collapsed {
+	&:hover {
+		background-color: #efefef;
+		+ .expandable-table-row-expanded > td.expandable-table-expandable-cell {
+			background-color: #efefef;
+		}
+	}
+	td {
+		padding-top: 15px;
+		padding-bottom: 15px;
+		cursor: pointer;
+	}
+	td:last-child {
+		padding-top: 8px;
+		padding-bottom: 8px;
+	}
+}
+
+table.padded-table tbody tr {
+	td {
+		padding-top: 15px;
+		padding-bottom: 15px;
+	}
+	td.operation-cell {
+		padding: 8px;
+	}
+}
+
+table tbody tr.expandable-table-row-expanded {
+	td.expandable-table-expandable-cell {
+		padding: 0px;
+		div {
+			margin: 8px;
+		}
+	}
+	td {
+		border-top: 0px solid #ddd;
+		background-color: #F5F5F5;
+	}
+}
+
+tr.expandable-table-row-expanded table.expandable-table {
+	tr:first-child {
+		border-top: 1px solid #ddd;
+	}
+	tr:last-child {
+		border-bottom: 1px solid #ddd;
+	}
+	th {
+		background-color: #FFFFFF;
+		padding: 8px
+	}
+	th:first-child {
+		border-left: 1px solid #ddd;
+	}
+	th:last-child {
+		border-right: 1px solid #ddd;
+	}
+	td {
+		border-top: 1px solid #ddd;
+		background-color: #FFFFFF;
+		padding-top: 15px;
+		padding-bottom: 15px;
+	}
+	td:first-child {
+		border-left: 1px solid #ddd;
+	}
+	td:last-child {
+		border-right: 1px solid #ddd;
+		padding-top: 8px;
+		padding-bottom: 8px;
+	}
+}
