--- a/gitb-ui/app/assets/stylesheets/less/components/common.less
+++ b/gitb-ui/app/assets/stylesheets/less/components/common.less
@@ -20,7 +20,7 @@
 	}
 }
 
-#dashboard-table, #dashboard-table-active, #systems-table, #system-tests-table, #system-tests-table-active, #system-tests-execution, #test-suites-table, #parameter-table, #members-table {
+#dashboard-table, #dashboard-table-active, #systems-table, #system-tests-table, #system-tests-table-active, #test-suites-table, #parameter-table, #members-table {
 	td.operations {
 		padding-top: 8px;
 		padding-bottom: 8px;
