--- a/gitb-ui/app/assets/stylesheets/less/systems/conformance.less
+++ b/gitb-ui/app/assets/stylesheets/less/systems/conformance.less
@@ -148,8 +148,8 @@
 #conformanceDetailPage, #conformanceDashboardPage, #conformanceDashboardPageTable {
 	.panel-heading > .btn-toolbar {
 		&.padded {
-			margin-right: 7px;
+			margin-right: 1px;
 		}
-		margin-right: -2px;
+		margin-right: -8px;
 	}
 }
